fix text wrap

--- a/css/board.css
+++ b/css/board.css
@@ -464,9 +464,7 @@ taskDetailsOverlay {
   color: #000;
   margin-bottom: var(--space-24);
   max-width: 355px;
-  white-space: wrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  overflow-wrap: break-word;
 }
 
 .detail-info-row {
@@ -630,7 +628,7 @@ taskDetailsOverlay {
   padding-right: 20px;
   overflow: auto;
   margin-left: 18px;
-  margin-right: 18px;  
+  margin-right: 18px;
 }
 
 .overlay-container .add-task-content {
